Bug 330091 - map coorresponding to address , bad result
Summary: map coorresponding to address , bad result
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.12
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-17 18:13 UTC by Philippe ROUBACH
Modified: 2014-01-21 12:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13
Sentry Crash Report:


Attachments
case A 1 (609.50 KB, image/png)
2014-01-17 18:20 UTC, Philippe ROUBACH
Details
case A 2 (559.02 KB, image/png)
2014-01-17 18:20 UTC, Philippe ROUBACH
Details
case B 1 (394.35 KB, image/png)
2014-01-17 18:21 UTC, Philippe ROUBACH
Details
case C (574.35 KB, image/png)
2014-01-17 18:21 UTC, Philippe ROUBACH
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Philippe ROUBACH 2014-01-17 18:13:08 UTC
A .with the default setting 
http://open.mapquestapi.com/nominatim/v1/search.php?q=%s,+%z+%l,+%c
1. 
in kaddressbook
i click on an address 1 rue Vernet 77340 PONTAULT-COMBAULT FRANCE
then
it does not found the address
then
in http://open.mapquestapi.com in the search field i use
1 rue Vernet 77340 PONTAULT-COMBAULT fr
it founds the address

2.
in kaddressbook
i click on an address 6 rue Claude Decaen 75012 PARIS FRANCE
then
it founds the address
the zoom is good but there is no pointer to help finding the spot

B in kaddressbook i suppress the parameter %z (postal code)
1.
i click on an address 1 rue Vernet 77340 PONTAULT-COMBAULT FRANCE
then
success !
but again the zoom is good but no pointer

C.
when you use directly open.mapquest.fr with the same address then you
have a pointer

conclusion :

for such an in progress openstreetmap i advise to not use %z
and
please supply a pointer

or supply a better maps . why there is no more google maps choice ?

Reproducible: Always
Comment 1 Philippe ROUBACH 2014-01-17 18:20:23 UTC
Created attachment 84702 [details]
case A 1
Comment 2 Philippe ROUBACH 2014-01-17 18:20:49 UTC
Created attachment 84703 [details]
case A 2
Comment 3 Philippe ROUBACH 2014-01-17 18:21:12 UTC
Created attachment 84704 [details]
case B 1
Comment 4 Philippe ROUBACH 2014-01-17 18:21:36 UTC
Created attachment 84706 [details]
case C
Comment 5 Philippe ROUBACH 2014-01-17 18:30:37 UTC
moreover

using directly open.mapquest.fr you have a rich tool bar to search hotels , bars ... , to print the map
Comment 6 Philippe ROUBACH 2014-01-17 18:32:45 UTC
using http://open.mapquest.fr/?q=%s,%l,%c

you have the best user experience
Comment 7 Laurent Montel 2014-01-20 09:18:40 UTC
I will add to my todo list to investigate it.
Comment 8 Laurent Montel 2014-01-20 13:01:17 UTC
I need to investigate openstreetmap api
Comment 9 Laurent Montel 2014-01-21 06:41:56 UTC
Git commit b0dad15c031dd40c2828de909a2451339de55fca by Montel Laurent.
Committed on 21/01/2014 at 06:41.
Pushed by mlaurent into branch 'KDE/4.12'.

Start to fix bug 330091 - map coorresponding to address , bad result

Indeed without +z it's better

M  +1    -1    akonadi/contact/actions/contactactionssettings.kcfg.cmake

http://commits.kde.org/kdepimlibs/b0dad15c031dd40c2828de909a2451339de55fca
Comment 10 Laurent Montel 2014-01-21 07:47:24 UTC
Git commit 146c0590d158fe963d143570d47dd72fecae46c8 by Montel Laurent.
Committed on 21/01/2014 at 07:46.
Pushed by mlaurent into branch 'master'.

Fix Bug 330091 - map coorresponding to address , bad result

Add more map (googlemap, open.mapquest)
FIXED-IN: 4.13

M  +2    -0    akonadi/contact/actions/contactactionssettings.kcfg.cmake
M  +13   -1    akonadi/contact/actions/showaddressaction.cpp
M  +3    -30   akonadi/contact/kcm/akonadicontactactions.ui
M  +30   -0    akonadi/contact/kcm/kcmakonadicontactactions.cpp
M  +1    -1    akonadi/contact/kcm/kcmakonadicontactactions.h

http://commits.kde.org/kdepimlibs/146c0590d158fe963d143570d47dd72fecae46c8
Comment 11 Laurent Montel 2014-01-21 07:48:29 UTC
I added google map/open.mapquest.com request.
Don't know if there is more service for it.
Thanks for reporting this bug.
Comment 12 Philippe ROUBACH 2014-01-21 09:20:12 UTC
we must wait for 4.12.2 or what ?
Comment 13 Philippe ROUBACH 2014-01-21 09:47:42 UTC
openmaquest.com by default uses english language
this site offers in its preference to select a language
but
curiously does not select automaticaly the language of the user.
i test it with ff and chromium .

same pb but minor one with maps.google.com : 
automaticaly all is in french but the default map is the us map

with maps.google.fr the default map is the one of my location (geo localization mechanism ?)

perhaps in the request we can add a language parameter .
or
at least for the french we have the chance to have open.mapquest.fr then add it

thanks
Comment 14 Laurent Montel 2014-01-21 10:26:41 UTC
"we must wait for 4.12.2 or what ?" 4.13 I added new i18n
Comment 15 Laurent Montel 2014-01-21 10:27:44 UTC
(In reply to comment #13)
> openmaquest.com by default uses english language
> this site offers in its preference to select a language
> but
> curiously does not select automaticaly the language of the user.
> i test it with ff and chromium .
> 
> same pb but minor one with maps.google.com : 
> automaticaly all is in french but the default map is the us map
> 
> with maps.google.fr the default map is the one of my location (geo
> localization mechanism ?)
> 
> perhaps in the request we can add a language parameter .
> or
> at least for the french we have the chance to have open.mapquest.fr then add
> it
> 
> thanks

Yes I know for language it's a problem.
But we can't hardcode french url :)
But perhaps indeed there is a language parameter.
I will look at it.
Comment 16 Laurent Montel 2014-01-21 10:59:46 UTC
We can use "https://maps.google.com/maps?hl=fr&q="
Comment 17 Philippe ROUBACH 2014-01-21 12:08:40 UTC
i tested https://www.google.com/maps?hl=fr

google changes it to
https://www.google.com/maps/preview?hl=fr#!data=!1m4!1m3!1d21429026!2d-95.677068!3d37.0625

i supposed it is because i use the new google map but it's not a pb

bad localization for the map . you must ask for google map to seek your position . it is not automatic ! 

so i consider with google map there is no more pb
Comment 18 Philippe ROUBACH 2014-01-21 12:36:17 UTC
for openmapquest

www.openmapquest.com in french is poorer than open.mapquest.fr

not all is in french .

the search bar supplies 6 types of poi instead of 11 !

definitively i use open.mapquest.fr .
Comment 19 Philippe ROUBACH 2014-01-21 12:52:47 UTC
in my prevoius comment #13 and comment #18 i made an error

it  is www.mapquest.com i speak about .

i discover this

open.mapquest.fr is a multilanguage site it offers 29 languages instead of 14 for www.mapquest.com

so i strongly recommend to use open.mapquest.fr