Fix Bug 330091 - map coorresponding to address , bad result

Add more map (googlemap, open.mapquest)

BUG: 330091
FIXED-IN: 4.13