contact/kcm/kcmakonadicontactactions.cpp
@@ -68,7 +68,28 @@ KCMAkonadiContactActions::KCMAkonadiContactActions( QWidget *parent, const QVari
   ui.SendSmsAction->addItem(i18n("SflPhone"), ContactActionsSettings::UseSflPhoneSms);
   ui.SendSmsAction->addItem(i18n("External Application"), ContactActionsSettings::UseExternalSmsApplication);
   connect(ui.SendSmsAction, SIGNAL(currentIndexChanged(int)), SLOT(slotSmsPhoneNumberActionChanged(int)));
+
+  ui.ShowAddressAction->addItem(i18n("Web Browser"), ContactActionsSettings::UseBrowser);
+  ui.ShowAddressAction->addItem(i18n("External Application"), ContactActionsSettings::UseExternalAddressApplication);
+  ui.ShowAddressAction->addItem(i18n("Google map"), ContactActionsSettings::UseGooglemap);
+  ui.ShowAddressAction->addItem(i18n("Map quest"), ContactActionsSettings::UseMapquest);
+
+  connect(ui.ShowAddressAction, SIGNAL(currentIndexChanged(int)), SLOT(slotShowAddressActionChanged(int)));
+
   load();
+}
+
+void KCMAkonadiContactActions::slotShowAddressActionChanged(int value)
+{
+    ContactActionsSettings::EnumShowAddressAction enumValue = static_cast<ContactActionsSettings::EnumShowAddressAction>(ui.ShowAddressAction->itemData(value).toInt());
+    if (enumValue == ContactActionsSettings::UseBrowser) {
+        ui.stackedWidget->setCurrentIndex(0);
+    } else if (enumValue == ContactActionsSettings::UseExternalAddressApplication){
+        ui.stackedWidget->setCurrentIndex(1);
+    } else {
+        ui.stackedWidget->setCurrentIndex(2);
+    }
+    emit changed(true);
 }
 
 void KCMAkonadiContactActions::slotSmsPhoneNumberActionChanged(int value)
@@ -96,6 +117,11 @@ void KCMAkonadiContactActions::slotDialPhoneNumberActionChanged(int value)
 void KCMAkonadiContactActions::load()
 {
   mConfigManager->updateWidgets();
+
+  ContactActionsSettings::EnumShowAddressAction enumValueAddress = static_cast<ContactActionsSettings::EnumShowAddressAction>(ContactActionsSettings::self()->showAddressAction());
+  const int indexAddress = ui.ShowAddressAction->findData(enumValueAddress);
+  ui.ShowAddressAction->setCurrentIndex(indexAddress);
+
   ContactActionsSettings::EnumDialPhoneNumberAction enumValue = static_cast<ContactActionsSettings::EnumDialPhoneNumberAction>(ContactActionsSettings::self()->dialPhoneNumberAction());
   const int index = ui.DialPhoneNumberAction->findData(enumValue);
   ui.DialPhoneNumberAction->setCurrentIndex(index);
@@ -109,6 +135,9 @@ void KCMAkonadiContactActions::load()
 void KCMAkonadiContactActions::save()
 {
   mConfigManager->updateSettings();
+  ContactActionsSettings::EnumShowAddressAction enumValueAddress = static_cast<ContactActionsSettings::EnumShowAddressAction>(ui.ShowAddressAction->itemData(ui.ShowAddressAction->currentIndex()).toInt());
+  ContactActionsSettings::self()->setShowAddressAction(enumValueAddress);
+
   ContactActionsSettings::EnumDialPhoneNumberAction enumValue = static_cast<ContactActionsSettings::EnumDialPhoneNumberAction>(ui.DialPhoneNumberAction->itemData(ui.DialPhoneNumberAction->currentIndex()).toInt());
   ContactActionsSettings::self()->setDialPhoneNumberAction(enumValue);
 
@@ -123,6 +152,7 @@ void KCMAkonadiContactActions::defaults()
   const bool bUseDefaults = ContactActionsSettings::self()->useDefaults( true );
   ui.DialPhoneNumberAction->setCurrentIndex(ContactActionsSettings::self()->dialPhoneNumberAction());
   ui.SendSmsAction->setCurrentIndex(ContactActionsSettings::self()->sendSmsAction());
+  ui.ShowAddressAction->setCurrentIndex(ContactActionsSettings::self()->showAddressAction());
   ContactActionsSettings::self()->useDefaults( bUseDefaults );
 }
 
