contact/kcm/kcmakonadicontactactions.h
@@ -42,7 +42,7 @@ public:
 private Q_SLOTS:
     void slotDialPhoneNumberActionChanged(int);
     void slotSmsPhoneNumberActionChanged(int value);
-
+    void slotShowAddressActionChanged(int value);
 private:
     KConfigDialogManager *mConfigManager;
     Ui_AkonadiContactActions ui;
