contact/actions/contactactionssettings.kcfg.cmake
@@ -11,6 +11,8 @@
       <choices>
         <choice name="UseBrowser"/>
         <choice name="UseExternalAddressApplication"/>
+        <choice name="UseGooglemap"/>
+        <choice name="UseMapquest"/>
       </choices>
       <whatsthis>Defines which application shall be used to show the postal address of a contact on a map. If 'Web Browser' is selected, an URL can be defined with placeholders for the single address parts. If 'External Application' is selected, a command with placeholders can be defined.</whatsthis>
       <default>UseBrowser</default>
